@@ -5,6 +5,12 @@ libdebian-installer (0.22) UNRELEASED; urgency=low
     - Fix handling of nonresolvable virtual packages.
     - Fix handling of subarchitecture strings with different length
       (closes: #243692).
+  * Joey Hess
+    - Add more major numbers for cciss devices.
+    - Add support for all of the /dev/ida/ devices. Closes: #243411
+    - Add support for /dev/ataraid/ devices.
+    - Allow devfs.c to be built as a standalone binary, for simplified
+      testing.
 
  -- Bastian Blank <waldi@debian.org>  Wed, 14 Apr 2004 12:39:33 +0200
 
